--- a/test_projects/django14/likert_test_app/templates/likert/detail.html
+++ b/test_projects/django14/likert_test_app/templates/likert/detail.html
@@ -6,18 +6,23 @@
 
 <style type="text/css" media="screen">
   .likert-star {
-      color: #ff0000;
+      font-size: 32px;
+      line-height: 21px;
   }
-  s.fa.fa-star.likert-star {
-      color: #ffd76e;
-      text-shadow:-1px -1px 0 #e1ba53,  
-                   1px -1px 0 #e1ba53,
-                  -1px  1px 0 #e1ba53,
-                   1px  1px 0 #e1ba53;
-      -webkit-text-stroke: 1px #e1ba53;
+  i.glyphicon.glyphicon-star.likert-star {
+/*      color: #f3e16d;*/
+      color: #fde16d;
+      text-shadow:-1px -1px 0 #c9c099,
+                   1px -1px 0 #c9c099,
+                  -1px  1px 0 #c9c099,
+                   1px  1px 0 #c9c099;
+      -webkit-text-stroke: 1px #c9c099;
   }
-  s.fa.fa-star-o.likert-star {
-      color: #c0c0c0;
+  i.glyphicon.glyphicon-star-empty.likert-star {
+      color: #cccccc;
+  }
+  i.glyphicon.glyphicon-ban-circle.likert-star {
+      color: #cccccc;
   }
 </style>
 
