--- a/test_projects/django14/global_assets/templates/app/home.html
+++ b/test_projects/django14/global_assets/templates/app/home.html
@@ -7,7 +7,7 @@
   <h1>{% trans 'Likert Demos' %}</h1>
 
   <ul>
-    <li><a href="{% url likert_list %}">{% trans 'Sample survey app' %}</a></li>
+    <li><a href="{% url 'likert_list' %}">{% trans 'Sample survey app' %}</a></li>
   </ul>
 
 {% endblock %}
