--- a/test_projects/django14/likert_test_app/templates/likert/index.html
+++ b/test_projects/django14/likert_test_app/templates/likert/index.html
@@ -1,4 +1,5 @@
 {% extends "likert/base.html" %}
+{% load url from future %}
 {% load i18n static %}
 
 {% block content %}
@@ -8,16 +9,16 @@
       <h1>{% trans 'Surveys' %}</h1>
 
       {% if not surveys %}
-      <p>Be the first to <a href="{% url likert_add %}">complete a survey</a>.</p>
+      <p>Be the first to <a href="{% url 'likert_add' %}">complete a survey</a>.</p>
       {% else %}
       <ul>
         {% for survey in surveys %}
-        <li><a href="{% url likert_detail survey.pk %}">{% trans 'Response' %} #{{ survey.pk }}</a></li>
+        <li><a href="{% url 'likert_detail' survey.pk %}">{% trans 'Response' %} #{{ survey.pk }}</a></li>
         {% endfor %}
       </ul>
       {% endif %}
 
-      <p><a href="{% url likert_add %}" class="btn btn-success btn-lg">{% trans 'Add a survey response' %}</a></p>
+      <p><a href="{% url 'likert_add' %}" class="btn btn-success btn-lg">{% trans 'Add a survey response' %}</a></p>
     </div>
   </div>
 
