--- a/test_projects/django14/global_assets/templates/theme/site_base.html
+++ b/test_projects/django14/global_assets/templates/theme/site_base.html
@@ -35,18 +35,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url home %}">{% trans 'Likert demo' %}</a>
+        <a class="navbar-brand" href="{% url 'home' %}">{% trans 'Likert demo' %}</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="{% url home %}">Home</a></li>
+          <li class="active"><a href="{% url 'home' %}">Home</a></li>
           <li><a href="https://github.com/kelvinwong-ca/django-likert-field">Github repo</a></li>
           <li><a href="http://www.kelvinwong.ca/coders">Contact Kelvin</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Demos <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li class="dropdown-header">Likert Field demos</li>
-              <li><a href="{% url likert_list %}">Survey app using Likert field and jQuery</a></li>
+              <li><a href="{% url 'likert_list' %}">Survey app using Likert field and jQuery</a></li>
             </ul>
           </li>
         </ul>
