url tags and unicode issues

--- a/test_projects/django14/global_assets/templates/theme/html5.html
+++ b/test_projects/django14/global_assets/templates/theme/html5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% block html_tag_replacement %}
+{% load url from future %}{% block html_tag_replacement %}
 <html>
 {% endblock %}
 <head>
